--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
         <script src="scripts/controllers/detail.js"></script>
         <script src="scripts/services/facebookservice.js"></script>
         <script src="scripts/services/watchservice.js"></script>
+        <script src="scripts/filters/paginationfilter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
